# gotify-desktop-macos

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment-2.toml  environment-3.toml  environment-5.toml  environment-7.toml
.github/workflows/: ci.yml
docs/: frontend-backend-standard.md
scripts/: check-standard.mjs  release.sh  set-version.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_tray_icons.swift
src-tauri/src/: consts.rs  contract.rs  core.rs  diagnostics.rs  main.rs  messages.rs  model.rs  notifications.rs  pause.rs  preview.rs  settings.rs  stream.rs  ui_shell.rs
src/components/: DiagnosticsPanel.tsx  MessageFeed.tsx  SettingsForm.tsx
src/utils/: debug.ts  messages.ts  selection.ts  time.ts  windowing.ts
