[package]
name = "gotify-desktop"
version = "0.1.0"
description = "Tray-first Gotify desktop client"
authors = ["nwarner"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = true, features = ["clock"] }
futures-util = "0.3.31"
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tokio = { version = "1.49.0", features = ["macros", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
